added explicit check for class(expected) == class(actual) to the RecursiveInterceptedEqualityChecker; removed dead code